--- a/Index.html
+++ b/Index.html
@@ -2,27 +2,27 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Ciudad Primavera – Tour Schedule</title>
+<title>Ciudad Primavera – Stage Manager</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 :root{
-  --bg-gradient: linear-gradient(180deg,#b9b7c9 0%, #f3b184 100%);
+  --bg-gradient: linear-gradient(180deg,#b7b6c8 0%, #f2a365 55%, #f29b4a 100%);
   --white:#ffffff;
-  --yellow:#ffd54f;
+  --yellow:#ffe066;
   --orange:#ff9800;
   --orange-dark:#f57c00;
-  --text-soft:rgba(255,255,255,.85);
+  --text-soft:rgba(255,255,255,.9);
 }
 
 *{
   box-sizing:border-box;
-  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", system-ui, sans-serif;
+  font-family:"Arial Rounded MT Bold","Helvetica Rounded",system-ui,sans-serif;
 }
 
 body{
   margin:0;
-  padding:50px 20px 80px;
+  padding:50px 20px 90px;
   background:var(--bg-gradient);
   color:var(--white);
 }
@@ -32,15 +32,21 @@ h1{
   text-align:center;
   font-size:46px;
   letter-spacing:3px;
-  margin-bottom:10px;
+  margin-bottom:8px;
 }
 
 .subtitle{
   text-align:center;
   font-size:18px;
   letter-spacing:2px;
+}
+
+.subline{
+  text-align:center;
+  font-size:14px;
+  letter-spacing:1.5px;
   opacity:.9;
-  margin-bottom:60px;
+  margin:10px 0 60px;
 }
 
 /* ===== CALENDAR ===== */
@@ -53,12 +59,11 @@ h1{
 }
 
 .event{
-  background:rgba(255,255,255,.12);
+  background:rgba(255,255,255,.14);
   backdrop-filter: blur(6px);
-  border-radius:20px;
+  border-radius:22px;
   padding:22px;
   text-align:center;
-  position:relative;
 }
 
 .city{
@@ -67,7 +72,7 @@ h1{
 }
 
 .date{
-  font-size:34px;
+  font-size:36px;
   font-weight:900;
   color:var(--yellow);
 }
@@ -79,7 +84,7 @@ h1{
 
 .venue{
   font-size:13px;
-  opacity:.9;
+  opacity:.95;
   margin-top:6px;
 }
 
@@ -89,13 +94,13 @@ h1{
 
 .flight a{
   display:inline-block;
-  padding:10px 18px;
+  padding:10px 20px;
   background:var(--orange);
   color:#fff;
   text-decoration:none;
   font-size:12px;
   letter-spacing:1px;
-  border-radius:20px;
+  border-radius:22px;
   transition:.3s;
 }
 
@@ -106,23 +111,23 @@ h1{
 /* ===== TASKS ===== */
 h2{
   text-align:center;
-  margin:80px 0 20px;
+  margin:90px 0 25px;
   letter-spacing:2px;
 }
 
 .tasks{
-  max-width:900px;
+  max-width:980px;
   margin:0 auto;
-  background:rgba(255,255,255,.15);
-  border-radius:24px;
-  padding:30px 26px;
+  background:rgba(255,255,255,.18);
+  border-radius:28px;
+  padding:36px 32px;
 }
 
 .task{
   display:flex;
   gap:14px;
   padding:14px 0;
-  border-bottom:1px dashed rgba(255,255,255,.3);
+  border-bottom:1px dashed rgba(255,255,255,.35);
 }
 
 .task:last-child{
@@ -138,12 +143,13 @@ h2{
 .task label{
   cursor:pointer;
   font-size:15px;
+  line-height:1.35;
 }
 
 .task span{
   display:block;
   font-size:13px;
-  opacity:.85;
+  opacity:.9;
   margin-top:4px;
 }
 
@@ -153,7 +159,7 @@ h2{
   margin-top:40px;
   font-size:12px;
   letter-spacing:1px;
-  opacity:.8;
+  opacity:.85;
 }
 </style>
 </head>
@@ -162,8 +168,18 @@ h2{
 
 <h1>CIUDAD PRIMAVERA</h1>
 <div class="subtitle">GIRA DE ESTADIOS</div>
+<div class="subline">Stage Manager Show – Juan Gomez “Juanchito”</div>
 
 <div class="calendar">
+
+  <!-- NUEVA FECHA -->
+  <div class="event">
+    <div class="city">Puerto Gaitán</div>
+    <div class="date">11</div>
+    <div class="month">ENERO 2026</div>
+    <div class="venue">Tarima Río</div>
+    <div class="flight"><a href="#">VER VUELOS</a></div>
+  </div>
 
   <div class="event">
     <div class="city">Cali</div>
@@ -220,41 +236,89 @@ h2{
 <div class="tasks">
 
   <div class="task">
-    <input type="checkbox" id="a1">
-    <label for="a1">
+    <input type="checkbox">
+    <label>
+      Coordinación general del show
+      <span>Ejecución fluida, tiempos y narrativa completa</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
       Entradas y salidas de bailarines
-      <span>Cues sincronizados con bloques musicales</span>
+      <span>Cues exactos por canción y visuales</span>
     </label>
   </div>
 
   <div class="task">
-    <input type="checkbox" id="a2">
-    <label for="a2">
-      Activaciones de efectos especiales
-      <span>Luces, humo, pirotecnia, visuales</span>
-    </label>
-  </div>
-
-  <div class="task">
-    <input type="checkbox" id="a3">
-    <label for="a3">
+    <input type="checkbox">
+    <label>
       Cambios de vestuario del artista
-      <span>Backstage + tiempos de transición</span>
+      <span>Backstage, asistentes y tiempos de retorno</span>
     </label>
   </div>
 
   <div class="task">
-    <input type="checkbox" id="a4">
-    <label for="a4">
-      Entradas y salidas de invitados
-      <span>Accesos laterales y puntos de aparición</span>
+    <input type="checkbox">
+    <label>
+      Invitados en escena
+      <span>Accesos, posiciones y seguridad</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      FX & efectos especiales
+      <span>Luces, CO₂, pirotecnia, humo y confeti</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      Audio FOH & Monitores
+      <span>Micrófonos, playback, intros y salidas</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      Iluminación
+      <span>Snapshots, cambios de escena y golpes musicales</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      Visuales / Pantallas
+      <span>Contenido correcto por bloque</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      Comunicación intercom
+      <span>Stage, FOH, luces, audio y producción</span>
+    </label>
+  </div>
+
+  <div class="task">
+    <input type="checkbox">
+    <label>
+      Plan de contingencia
+      <span>Fallas técnicas, retrasos o cambios</span>
     </label>
   </div>
 
 </div>
 
 <div class="note">
-  Tour Production · Stage Control · Ciudad Primavera
+  Tour Production · Stage Direction · Ciudad Primavera
 </div>
 
 </body>
